<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Common strings -->
    <string name="quotelock">QuoteLock</string>
    <string name="easter_egg">▲ + ▼ = ◆</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="enable">Enable</string>
    <string name="reboot">Reboot</string>
    <string name="ignore">Ignore</string>
    <string name="save">Save</string>
    <string name="disable">disable</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="features">Features</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="connect_account">Connect Google account</string>
    <string name="switch_account">Switch Google account</string>
    <string name="local">Local</string>
    <string name="remote">Remote</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="enable_xposed_module_title">Enable Xposed module</string>
    <string name="enable_xposed_module_message">
        Android does not normally allow apps to add text to the lockscreen.\n\n
        For QuoteLock to function correctly, you must enable the included Xposed
        module.
    </string>
    <string name="module_outdated_title">Xposed module updated</string>
    <string name="module_outdated_message">Please reboot your device for changes to take effect.</string>
    <string name="xposed_not_installed">Xposed not installed</string>
    <string name="report_bug">Report bug</string>
    <string name="battery_optimization_title">Battery optimization enabled</string>
    <string name="battery_optimization_message">This may cause the background task to fail to run automatically on some devices, disable it?</string>
    <string name="pref_refresh_interval_title">Refresh interval</string>
    <string name="pref_refresh_interval_summary">How often to refresh the quote</string>
    <string name="pref_refresh_interval_summary_alt">Cannot set refresh rate for selected provider</string>
    <string name="pref_unmetered_only_title">Unmetered only</string>
    <string name="pref_unmetered_only_summary">Don\'t update on metered connections</string>
    <string name="pref_unmetered_only_summary_alt">Selected provider does not require internet</string>
    <string name="pref_font_size_text_title">Quote font size</string>
    <string name="pref_font_size_text_summary">Size of the quote text</string>
    <string name="pref_font_size_source_title">Source font size</string>
    <string name="pref_font_size_source_summary">Size of the source text</string>
    <string name="pref_font_style_text_title">Quote font style</string>
    <string name="pref_font_style_text_summary">Font style of the quote text</string>
    <string name="pref_font_style_source_title">Source font style</string>
    <string name="pref_font_style_source_summary">Font style of the source text</string>
    <string name="pref_font_family_title">Font family</string>
    <string name="pref_font_family_summary">Font family of the quote and source text</string>
    <string name="pref_layout_padding_top_title">Padding top</string>
    <string name="pref_layout_padding_top_summary">Padding top of the layout</string>
    <string name="pref_layout_padding_bottom_title">Padding bottom</string>
    <string name="pref_layout_padding_bottom_summary">Padding bottom of the layout</string>
    <string name="pref_refresh_info_title">Refresh info</string>
    <string name="pref_refresh_info_summary">Last update: %s</string>
    <string name="pref_quote_module_title">Quote provider</string>
    <string name="pref_display_on_aod_title">[TEST]Display on AOD</string>
    <string name="pref_display_on_aod_summary">NOTE: Only tested on OP7Pro OOS11 OB4!</string>
    <string name="pref_quote_module_summary">Select a quote source</string>
    <string name="pref_module_preferences_title">Quote provider preferences</string>
    <string name="pref_module_preferences_summary">Manage provider-specific settings</string>
    <string name="pref_module_preferences_summary_alt">No preferences for selected provider</string>
    <string name="pref_collection_title">Collections</string>
    <string name="pref_history_title">Histories</string>
    <string name="pref_about_credits_title">Credits</string>
    <string name="pref_about_credits_summary">Who did what now?</string>
    <string name="pref_about_github">View project on GitHub (Original|Archived)</string>
    <string name="pref_about_github_current">View project on GitHub (Active)</string>
    <string name="pref_about_version">Version</string>
    <string name="refesh_quote">Refresh quote</string>
    <string name="downloading_quote">Downloading quote…</string>
    <string name="quote_download_failed">Failed to download quote</string>
    <string name="quote_download_success">Quote downloaded successfully</string>
    <string name="open_quotelock_app_line1">Welcome to QuoteLock!</string>
    <string name="open_quotelock_app_line2">Please open the configuration app</string>
    <string name="selected_module_not_found">Selected module could not be found</string>
    <string name="credits_title">Credits</string>
    <string name="credits_message">
        <![CDATA[
            <b>App development</b><br>
            - <a href="https://twitter.com/crossbowffs">crossbowffs</a><br>
            - <a href="https://github.com/Yubyf">Yubyf</a><br>
            - <a href="https://github.com/Hual">Hual</a><br>

            <br><b>Quote providers</b><br>
            - <a href="http://vnaas.apsun.xyz/">Visual Novel as a Service</a><br>
            - <a href="http://hitokoto.cn/">Hitokoto</a><br>
            - <a href="https://www.wikiquote.org/">Wikiquote QotD</a><br>
            - <a href="https://www.jinrishici.com/">Jinrishici 今日诗词</a><br>
            - <a href="https://freakuotes.com/">Freakuotes</a><br>
            - <a href="https://natune.net/zitate/">Natune.net</a><br>
            - <a href="https://www.brainyquote.com/">BrainyQuote</a><br>

            <br><b>Libraries used</b><br>
            - <a href="https://jsoup.org/">Jsoup</a><br>
            - <a href="https://github.com/apsun/RemotePreferences">RemotePreferences</a><br>
        ]]>
    </string>

    <!-- Provider-specific strings -->
    <string name="module_vnaas_name">Visual Novel as a Service (日本語)</string>
    <string name="module_hitokoto_name">Hitokoto 一言 (中文)</string>
    <string name="module_wikiquote_name">Wikiquote QotD (中文)</string>
    <string name="module_jinrishici_name">Jinrishici 今日诗词 (中文)</string>
    <string name="module_freakuotes_name">Freakuotes (Español)</string>
    <string name="module_natune_name">Natune.net (Deutsch)</string>
    <string name="module_brainy_name">BrainyQuote (English)</string>
    <string name="module_custom_name">Custom</string>
    <string name="module_collections_name">Collections</string>

    <!-- Custom quotes -->
    <string name="module_custom_setup_line1">No custom quotes set</string>
    <string name="module_custom_setup_line2">Please open the provider settings</string>
    <string name="module_custom_activity_label">Custom quotes</string>
    <string name="module_custom_enter_quote">Enter quote</string>
    <string name="module_custom_create_quote">Create quote</string>
    <string name="module_custom_text">Text</string>
    <string name="module_custom_source">Source</string>
    <string name="module_custom_saved_quote">Saved quote</string>
    <string name="module_custom_deleted_quote">Deleted quote</string>

    <!-- BrainyQuote -->
    <string name="module_brainy_activity_label">BrainyQuote setup</string>
    <string name="module_brainy_activity_type_general">QotD - General</string>
    <string name="module_brainy_activity_type_art">QotD - Art</string>
    <string name="module_brainy_activity_type_funny">QotD - Funny</string>
    <string name="module_brainy_activity_type_love">QotD - Love</string>
    <string name="module_brainy_activity_type_nature">QotD - Nature</string>

    <!-- Hitokoto -->
    <string name="module_hitokoto_activity_label">Hitokoto setup</string>
    <string name="module_hitokoto_activity_type_anime">Anime</string>
    <string name="module_hitokoto_activity_type_comic">Comic</string>
    <string name="module_hitokoto_activity_type_game">Game</string>
    <string name="module_hitokoto_activity_type_novel">Novel</string>
    <string name="module_hitokoto_activity_type_myself">Myself</string>
    <string name="module_hitokoto_activity_type_internet">From Internet</string>
    <string name="module_hitokoto_activity_type_other">Other</string>
    <string name="module_hitokoto_activity_type_film">Film</string>
    <string name="module_hitokoto_activity_type_poem">Poem</string>
    <string name="module_hitokoto_activity_type_netease_cloud">NetEase Cloud</string>
    <string name="module_hitokoto_activity_type_philosophy">Philosophy</string>
    <string name="module_hitokoto_activity_type_one_line">One-Line</string>

    <!-- Quotes collections -->
    <string name="quote_collections_activity_label">Quote collections</string>
    <string name="module_collections_setup_line1">No collections set</string>
    <string name="module_collections_setup_line2">Please open the collections settings</string>

    <!-- Quote histories-->
    <string name="quote_histories_activity_label">Quote histories</string>
</resources>
