<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings">
        <ListPreference
            android:key="pref_common_quote_module"
            android:title="@string/pref_quote_module_title"
            android:summary="@string/pref_quote_module_summary"
            android:defaultValue="com.crossbowffs.quotelock.modules.hitokoto.HitokotoQuoteModule"/>
        <Preference
            android:key="pref_module_preferences"
            android:title="@string/pref_module_preferences_title"
            android:summary="@string/pref_module_preferences_summary"/>
        <ListPreference
            android:key="pref_common_refresh_rate"
            android:title="@string/pref_refresh_interval_title"
            android:summary="@string/pref_refresh_interval_summary"
            android:entries="@array/refresh_interval_entries"
            android:entryValues="@array/refresh_interval_values"
            android:defaultValue="900"/>
        <SwitchPreference
            android:key="pref_common_unmetered_only"
            android:title="@string/pref_unmetered_only_title"
            android:summary="@string/pref_unmetered_only_summary"
            android:defaultValue="false"/>
        <ListPreference
            android:key="pref_common_font_size_text"
            android:title="@string/pref_font_size_text_title"
            android:summary="@string/pref_font_size_text_summary"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            android:defaultValue="20"/>
        <ListPreference
            android:key="pref_common_font_size_source"
            android:title="@string/pref_font_size_source_title"
            android:summary="@string/pref_font_size_source_summary"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            android:defaultValue="18"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/features">
        <Preference
            android:key="pref_collection"
            android:title="@string/pref_collection_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="pref_about_credits"
            android:title="@string/pref_about_credits_title"
            android:summary="@string/pref_about_credits_summary"/>
        <Preference
            android:key="pref_about_github"
            android:title="@string/pref_about_github"
            android:summary="github.com/apsun/QuoteLock"/>
        <Preference
            android:key="pref_about_version"
            android:title="@string/pref_about_version"/>
    </PreferenceCategory>
</PreferenceScreen>
