<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/module_hitokoto_activity_radiogroup"
        android:checkedButton="@+id/module_hitokoto_activity_type_random"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_anime"
            android:text="@string/module_hitokoto_activity_type_anime"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_comic"
            android:text="@string/module_hitokoto_activity_type_comic"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_game"
            android:text="@string/module_hitokoto_activity_type_game"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_novel"
            android:text="@string/module_hitokoto_activity_type_novel"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_myself"
            android:text="@string/module_hitokoto_activity_type_myself"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_internet"
            android:text="@string/module_hitokoto_activity_type_internet"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_other"
            android:text="@string/module_hitokoto_activity_type_other"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_film"
            android:text="@string/module_hitokoto_activity_type_film"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_poem"
            android:text="@string/module_hitokoto_activity_type_poem"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_netease_cloud"
            android:text="@string/module_hitokoto_activity_type_netease_cloud"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_philosophy"
            android:text="@string/module_hitokoto_activity_type_philosophy"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/module_hitokoto_activity_type_one_line"
            android:text="@string/module_hitokoto_activity_type_one_line"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </RadioGroup>
</LinearLayout>
