<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_round_close_24dp"
            app:title="@string/module_brainy_activity_label" />
    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:id="@+id/module_brainy_activity_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkedButton="@+id/module_brainy_activity_type_general"
        android:divider="?attr/dividerHorizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:showDividers="middle">

        <RadioButton
            android:id="@+id/module_brainy_activity_type_general"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/module_brainy_activity_type_general"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/module_brainy_activity_type_art"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/module_brainy_activity_type_art"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/module_brainy_activity_type_funny"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/module_brainy_activity_type_funny"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/module_brainy_activity_type_love"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/module_brainy_activity_type_love"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/module_brainy_activity_type_nature"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/module_brainy_activity_type_nature"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RadioGroup>
</LinearLayout>
